# cbx-agent-k8sops

./: .env.example  .gitignore  CLAUDE.md  HELM_MCP_UPDATE_SUMMARY.md  README.md  pyproject.toml  requirements.txt  rxconfig.py
.claude/: CLAUDE.md
docs/: README.md  agent-dependencies-and-requirements.md  current-status-jan-2026.md  roadmap.md
examples/docker/: .env.example  app-in-docker.sh
k8sops/: __init__.py  k8sops.py  session.py
k8sops/agent/: __init__.py  factory.py  prompts.py
k8sops/config/: __init__.py  loader.py  settings.py
k8sops/mcp_client/: __init__.py  client.py
k8sops/memory/: __init__.py  manager.py  prompts.py
k8sops/models/: __init__.py  embeddings.py  factory.py
k8sops/session/: __init__.py  agent_session.py  file_store.py  store.py
k8sops/ui/: __init__.py  app.py  styles.py
pkg/: load-secrets.sh
pkg/docker/: Dockerfile  build-config.env  build.sh  entrypoint.sh
quickstart/: README.md
quickstart/docker-compose/: .env.example  docker-compose.yml  run-compose.sh  start-compose-up.sh
quickstart/stdio/: start.sh
test/: start-docker.sh  start-http.sh
tests/: __init__.py  conftest.py
tests/e2e/: README.md  __init__.py  test_ui.py
tests/integration/: __init__.py  conftest.py  test_agent.py  test_mcp_client.py
tests/standalone/: __init__.py  debug_agent.py
tests/unit/: test_state.py
tests/validation/: __init__.py  config.yaml  run_validation.py
tools/: .env.example  get-openai-models.py
ui-design/: rxconfig.py
ui-design/ui_design/: __init__.py  ui_design.py
v1/: README.md  requirements.txt
v1/app/: main.py
(+113 files in other folders)
