[project]
name = "k8sops"
version = "2.0.0"
description = "AI-powered Kubernetes operations assistant with Reflex UI"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # UI Framework
    "reflex>=0.6.0",

    # Agent Framework (pinned versions from requirements.txt)
    "langgraph==1.0.5",
    "langchain-core==1.2.5",
    "langchain-anthropic==1.3.0",
    "langchain-openai==1.1.6",
    "langchain-ollama==1.0.1",

    # MCP Client
    "mcp>=1.0.0",
    "langchain-mcp-adapters==0.2.1",

    # Configuration
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",

    # Utilities
    "httpx>=0.27.0",
    "toml",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "playwright>=1.40.0",
    "pyyaml>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
